add v besic test

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 altgraph==0.15
 astroid==1.6.5
+atomicwrites==1.1.5
+attrs==18.1.0
 backports.functools-lru-cache==1.5
 certifi==2018.4.16
 chardet==3.0.4
 configparser==3.5.0
 dis3==0.1.2
 enum34==1.1.6
+funcsigs==1.0.2
 future==0.16.0
 futures==3.2.0
 idna==2.7
@@ -13,9 +16,13 @@ isort==4.3.4
 lazy-object-proxy==1.3.1
 macholib==1.9
 mccabe==0.6.1
+more-itertools==4.2.0
 pefile==2017.11.5
+pluggy==0.6.0
+py==1.5.4
 PyInstaller==3.3.1
 pylint==1.9.2
+pytest==3.6.3
 requests==2.19.1
 singledispatch==3.4.0.3
 six==1.11.0
